--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script type="text/javascript">
+    (function(m,e,t,r,i,k,a){
+        m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();
+        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
+    })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=104970634', 'ym');
+
+    ym(104970634, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", accurateTrackBounce:true, trackLinks:true});
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/104970634" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <title>Мир пингвинов</title>
     <meta name="yandex-verification" content="06b8b19bef3eb2b5" />
     <link rel="stylesheet" href="ctyle.css">
@@ -53,5 +64,6 @@
     </div>
 </body>
 </html>
+
 
 
